[gd_scene load_steps=21 format=2]

[ext_resource path="res://Scenes/thrishaStuff/player.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/thrishaStuff/images/mirror.png" type="Texture" id=2]
[ext_resource path="res://Scenes/thrishaStuff/PrologueScripts/Mirror.gd" type="Script" id=3]
[ext_resource path="res://Scenes/thrishaStuff/images/map.png" type="Texture" id=4]
[ext_resource path="res://Scenes/thrishaStuff/images/otherBed.png" type="Texture" id=5]
[ext_resource path="res://Scenes/thrishaStuff/PrologueScripts/Bed.gd" type="Script" id=6]
[ext_resource path="res://Scenes/thrishaStuff/PrologueScripts/Map.gd" type="Script" id=7]
[ext_resource path="res://Scenes/thrishaStuff/PrologueScripts/OtherBed.gd" type="Script" id=8]
[ext_resource path="res://icon.png" type="Texture" id=9]
[ext_resource path="res://Scenes/thrishaStuff/images/bed.png" type="Texture" id=10]
[ext_resource path="res://Scenes/thrishaStuff/ChapterOneScripts/Bard.gd" type="Script" id=11]
[ext_resource path="res://Scenes/thrishaStuff/images/bard.png" type="Texture" id=12]
[ext_resource path="res://Scenes/thrishaStuff/images/musicGeek.png" type="Texture" id=13]
[ext_resource path="res://Scenes/thrishaStuff/ChapterOneScripts/MusicGeek.gd" type="Script" id=14]
[ext_resource path="res://Scenes/thrishaStuff/images/cheerleader.png" type="Texture" id=15]
[ext_resource path="res://Scenes/thrishaStuff/ChapterOneScripts/Cheerleader.gd" type="Script" id=16]

[sub_resource type="CircleShape2D" id=1]
radius = 162.077

[sub_resource type="CircleShape2D" id=2]
radius = 162.077

[sub_resource type="CircleShape2D" id=3]
radius = 162.077

[sub_resource type="CircleShape2D" id=4]
radius = 162.077

[node name="Test" type="Node2D"]

[node name="OtherBed" type="Area2D" parent="."]
position = Vector2( 340, 848 )
scale = Vector2( 0.44001, 0.44001 )
script = ExtResource( 8 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="OtherBed"]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="OtherBed"]
scale = Vector2( 0.16, 0.16 )
texture = ExtResource( 5 )

[node name="QuestionMark" type="Sprite" parent="OtherBed"]
position = Vector2( 0, -135 )
texture = ExtResource( 9 )

[node name="Bed" type="Area2D" parent="."]
position = Vector2( 171, 851 )
scale = Vector2( 0.519999, 0.519999 )
script = ExtResource( 6 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Bed"]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="Bed"]
scale = Vector2( 0.16, 0.16 )
texture = ExtResource( 10 )

[node name="QuestionMark" type="Sprite" parent="Bed"]
position = Vector2( 0, -135 )
texture = ExtResource( 9 )

[node name="Map" type="Area2D" parent="."]
position = Vector2( 521, 850 )
scale = Vector2( 0.599998, 0.599998 )
script = ExtResource( 7 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Map"]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="Map"]
scale = Vector2( 0.16, 0.16 )
texture = ExtResource( 4 )

[node name="QuestionMark" type="Sprite" parent="Map"]
position = Vector2( 0, -135 )
texture = ExtResource( 9 )

[node name="Mirror" type="Area2D" parent="."]
position = Vector2( 726, 856 )
scale = Vector2( 0.56, 0.56 )
script = ExtResource( 3 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Mirror"]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="Mirror"]
scale = Vector2( 0.16, 0.16 )
texture = ExtResource( 2 )

[node name="QuestionMark" type="Sprite" parent="Mirror"]
position = Vector2( 0, -135 )
texture = ExtResource( 9 )

[node name="MusicGeek" type="Area2D" parent="."]
position = Vector2( 1169, 844 )
scale = Vector2( 0.64, 0.64 )
script = ExtResource( 14 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="MusicGeek"]
shape = SubResource( 2 )

[node name="Sprite" type="Sprite" parent="MusicGeek"]
scale = Vector2( 0.16, 0.16 )
texture = ExtResource( 13 )

[node name="QuestionMark" type="Sprite" parent="MusicGeek"]
position = Vector2( 0, -135 )
texture = ExtResource( 9 )

[node name="Bard" type="Area2D" parent="."]
position = Vector2( 1374, 851 )
scale = Vector2( 0.64, 0.64 )
script = ExtResource( 11 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Bard"]
shape = SubResource( 3 )

[node name="Sprite" type="Sprite" parent="Bard"]
scale = Vector2( 0.16, 0.16 )
texture = ExtResource( 12 )

[node name="QuestionMark" type="Sprite" parent="Bard"]
position = Vector2( 0, -135 )
texture = ExtResource( 9 )

[node name="Cheerleader" type="Area2D" parent="."]
position = Vector2( 1596, 853 )
scale = Vector2( 0.600002, 0.600002 )
script = ExtResource( 16 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Cheerleader"]
shape = SubResource( 4 )

[node name="Sprite" type="Sprite" parent="Cheerleader"]
scale = Vector2( 0.16, 0.16 )
texture = ExtResource( 15 )

[node name="QuestionMark" type="Sprite" parent="Cheerleader"]
position = Vector2( 0, -135 )
texture = ExtResource( 9 )

[node name="player" parent="." instance=ExtResource( 1 )]
position = Vector2( 908, 798 )
scale = Vector2( 0.68, 0.68 )

[node name="Camera2D" type="Camera2D" parent="player"]
position = Vector2( 54, -261 )
current = true

[connection signal="body_entered" from="OtherBed" to="OtherBed" method="_on_Bed_body_entered"]
[connection signal="body_exited" from="OtherBed" to="OtherBed" method="_on_Bed_body_exited"]
[connection signal="body_entered" from="Bed" to="Bed" method="_on_Bed_body_entered"]
[connection signal="body_exited" from="Bed" to="Bed" method="_on_Bed_body_exited"]
[connection signal="body_entered" from="Map" to="Map" method="_on_Map1_body_entered"]
[connection signal="body_exited" from="Map" to="Map" method="_on_Map1_body_exited"]
[connection signal="body_entered" from="Mirror" to="Mirror" method="_on_Mirror_body_entered"]
[connection signal="body_exited" from="Mirror" to="Mirror" method="_on_Mirror_body_exited"]
[connection signal="body_entered" from="MusicGeek" to="MusicGeek" method="_on_MusicGeek_body_entered"]
[connection signal="body_exited" from="MusicGeek" to="MusicGeek" method="_on_MusicGeek_body_exited"]
[connection signal="body_entered" from="Bard" to="Bard" method="_on_Bard_body_entered"]
[connection signal="body_exited" from="Bard" to="Bard" method="_on_Bard_body_exited"]
[connection signal="body_entered" from="Cheerleader" to="Cheerleader" method="_on_Cheerleader_body_entered"]
[connection signal="body_exited" from="Cheerleader" to="Cheerleader" method="_on_Cheerleader_body_exited"]
